--- a/html/homepage.html
+++ b/html/homepage.html
@@ -30,7 +30,7 @@
         </div>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <button type = "button" onclick="location.href='searchingOpponent.html';">  Find Opponent </button> 
+        <button type = "button" onclick="location.href='gamepage.html';">  Find Opponent </button> 
     </div>
 </body>
 
