--- a/html/instructions.html
+++ b/html/instructions.html
@@ -1,1 +1,17 @@
-instructions.html
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <title>instructions</title>
+
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"
+      integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+      crossorigin="anonymous"></script>
+
+</head>
+
+<body>
+
+</body>
+
+</html>
