updated gamJahan page

--- a/html/game.html
+++ b/html/game.html
@@ -31,10 +31,27 @@
         </style>
 
         <script>
-            var sound = new Audio("Mariokart.mp3");
-            var i = 0
-            var clicks = 0
-            var xpos = 0;
+
+        var gameArr = new Array(100);
+        for (var i = 0; i<gameArr.length; i++){
+            if (i%7 == 2 || i%4 == 2){
+                gameArr[i] = 0;
+            } else {
+                gameArr[i] = 1;
+            }
+        }
+        var count = 0
+        for (var i = 0; i<gameArr.length; i++){
+            if (gameArr[i] == 0){
+                count++;
+            }
+        }
+        console.log(count);
+        var index = 0;
+        var sound = new Audio("Mariokart.mp3");
+        var i = 0
+
+        function reset(){
             sound.play();
             var changeColors = window.setInterval(function(){
                 colors = ["red", "yellow", "green"];
@@ -46,25 +63,71 @@
                     window.clearInterval(changeColors);
                     $("#spacebar").append("Hit the spacebar!");
                 }
-
-
             }, 830);
-            $(function(){
-                $(document).keypress(function(e){
-                    if (e.keyCode == 32 && i > 2){
-                        clicks += 1;
-                        console.log("Spacebar hit");
-                        xpos += 30;
-                        $("#car").css({left: xpos});
-                        if(clicks == 10){
-                            //render win/lose page
-                        }
+        }
+        reset();
+        $(function(){
+            $(document).keypress(function(e){
+                if (e.keyCode == 32 && i > 2){
+                    console.log("Spacebar hit");
+                    console.log(index);
+                    if (gameArr[index] == 1){
+                        console.log()
+                        $("#stoplight").css("background-color", "red");
+                        index++;
+                        i = 0;
+                        console.log("win");
+                        prompt();
+                        $('#spacebar').remove();
+                        reset();
+                        // $('#spacebar').remove();
+                    } else {
+                        $("#spacebar").append("You lost!");
+                        $("#stoplight").css("background-color", "red");
+                        index++;
+                        i = 0;
+                        console.log("lose");
+                        prompt();
+                        $('#spacebar').remove();
+                        reset();
+                        // $('#spacebar').remove();
                     }
-                })
+                }
             })
+        })
+
         </script>
     </head>
     <body>
+    <center><canvas id="myCanvas" width="80" height="130"
+    style="border:3px solid #808080;"></center>
+    </canvas>
+
+    <script>
+    var canvas = document.getElementById("myCanvas");
+    var ctx = canvas.getContext("2d");
+    ctx.fillStyle = "#222";
+    ctx.fillRect(0,0,80,130);
+
+    ctx.fillStyle = "#c82124"; //red
+    ctx.beginPath();
+    ctx.arc(40,25,15,0,Math.PI*2,true);
+    ctx.closePath();
+    ctx.fill();
+
+    ctx.fillStyle = "#E5E500"; //yellow
+    ctx.beginPath();
+    ctx.arc(40,65,15,0,Math.PI*2,true);
+    ctx.closePath();
+    ctx.fill();
+
+    ctx.fillStyle = "#009900"; //green
+    ctx.beginPath();
+    ctx.arc(40,105,15,0,Math.PI*2,true);
+    ctx.closePath();
+    ctx.fill();
+    </script>
+
     <div id="stoplight">
 
     </div>
