--- a/html/gamepage.html
+++ b/html/gamepage.html
@@ -8,13 +8,37 @@
       integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
       crossorigin="anonymous"></script>
 
+    <style>
+      .loader {
+        border: 16px solid #f3f3f3;
+        border-radius: 50%;
+        border-top: 16px solid #3498db;
+        width: 120px;
+        height: 120px;
+        -webkit-animation: spin 2s linear infinite;
+        animation: spin 2s linear infinite;
+      }
+
+      @-webkit-keyframes spin {
+        0% { -webkit-transform: rotate(0deg); }
+        100% { -webkit-transform: rotate(360deg); }
+      }
+
+      @keyframes spin {
+        0% { transform: rotate(0deg); }
+        100% { transform: rotate(360deg); }
+      }
+    </style>
+
 </head>
 
 <body onload="loading()">
 
    <div id="searching">Finding your opponent</div>
+   <div id="loader" class="loader"></div>
 
    <div style="display:none;" id="foundOpponent">We found your Opponent. Your game will start in 5 seconds. Get Ready!</div>
+   <div style="display:none;" id="countDown"></div>
 
    <div style="display:none;" id="game">
 	   <ul style="list-style-type: none; display: inline-block;">
@@ -33,7 +57,6 @@
 
 <script>
 
-
 function loading() {
     setTimeout(changeLoad, 7000);
     setTimeout(foundOpponent, 12000);
@@ -41,11 +64,24 @@ function loading() {
 
 function changeLoad() {
   document.getElementById("searching").style.display = "none";
+  document.getElementById("loader").style.display = "none";
   document.getElementById("foundOpponent").style.display = "block";
+  document.getElementById("countDown").style.display = "block";
+  var count = 5;
+  document.getElementById("countDown").innerHTML = count;
+  count--;
+  var x = setInterval(function() {
+      document.getElementById("countDown").innerHTML = count;
+      count--;
+      if (count <= 0){
+        clearInterval(x);
+      }
+  }, 1000);
 }
 
 function foundOpponent() {
   document.getElementById("foundOpponent").style.display = "none";
+  document.getElementById("countDown").style.display = "none";
   document.getElementById("game").style.display = "block";
 }
 </script>
