--- a/html/game.html
+++ b/html/game.html
@@ -5,50 +5,7 @@
         <title>Game</title>
         <meta charset="UTF-8">
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-        <style type="text/css">
-            .loader {
-                border: 16px solid #f3f3f3;
-                border-radius: 50%;
-                border-top: 16px solid #3498db;
-                width: 120px;
-                height: 120px;
-                -webkit-animation: spin 2s linear infinite;
-                animation: spin 2s linear infinite;
-            }
-
-            @-webkit-keyframes spin {
-                0% { -webkit-transform: rotate(0deg); }
-                100% { -webkit-transform: rotate(360deg); }
-            }
-
-            @keyframes spin {
-                0% { transform: rotate(0deg); }
-                100% { transform: rotate(360deg); }
-            }
-
-            #stoplight {
-                background-color: red;
-                border-radius: 200px;
-                height: 100px;
-                width: 100px;
-                margin: auto;
-            }
-            #spacebar {
-                font-weight: bold;
-                font-size: 30px;
-                text-align: center;
-                padding-top: 50px;
-            }
-            #car {
-                background-color: blue;
-                border-radius: 40px;
-                height:40px;
-                width: 60px;
-                position: absolute;
-                padding-top: 10px;
-
-            }
-        </style>
+        <link rel="stylesheet" href="../css/game.css"> 
     </head>
     <body onload="loading()">
 
