change href location homepage to game

--- a/html/homepage.html
+++ b/html/homepage.html
@@ -24,7 +24,7 @@
         <input type='text' id="userIDField" name= "userid" placeholder="Enter your given ID"></input> <br> <br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <button type = "button" onclick="location.href='gamepage.html';">  Find Opponent </button> 
+        <button type = "button" onclick="location.href='game.html';">  Find Opponent </button> 
     </div>
 </body>
 
