--- a/html/instructions.html
+++ b/html/instructions.html
@@ -7,11 +7,28 @@
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"
       integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
       crossorigin="anonymous"></script>
-
+      <link rel="stylesheet" href="../css/instructions.css">
+      <script src="../js/instructions.js"></script>
 </head>
 
 <body>
+    <div id="instructions">
+        <p id="header">INSTRUCTIONS</p>
+        <div id="main">
+        <p>As soon as the light turns green, click the space bar. Whoever clicks the spacebar first wins the round!</p>
+               <p>If you win the round, you have three options:</p>
+                  <ol id="onstList">
+                    <li>Save Your Tokens. Remember, your tokens will increase in value each round</li><br>
+                    <li>Convert a number of tokens to points</li><br>
+                    <li>Deduct a number of points from your opponent</li>
+                  </ol>
+                <p>Whoever has the most points after 30 rounds wins the game!</p>
+        </div>
 
+        <div id="start">
+            <p id="starttext">START</p>
+        </div>
+    </div>
 </body>
 
 </html>
