--- a/html/instructions.html
+++ b/html/instructions.html
@@ -26,7 +26,7 @@
         </div>
 
         <div id="start">
-            <p id="starttext">START</p>
+            <p id="starttext">BEGIN</p>
         </div>
     </div>
 </body>
