--- a/html/game.html
+++ b/html/game.html
@@ -6,17 +6,19 @@
         <meta charset="UTF-8">
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
         <link rel="stylesheet" href="../css/game.css"> 
+        <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=BioRhyme" rel="stylesheet">
     </head>
     <body onload="loading()">
 
-        <div id="searching">Finding your opponent</div>
-        <div id="loader" class="loader"></div>
+        <center><div id="searching">Finding your opponent</div>
+        <div id="loader" class="loader"></div></center>
 
-        <div style="display:none;" id="foundOpponent">We found your Opponent. Your game will start in 5 seconds. Get Ready!</div>
-        <div style="display:none;" id="countDown"></div>
+        <center><div style="display:none;" id="foundOpponent">We found your Opponent.<br>Your game will start in 5 seconds.<br><br>Get Ready!</div>
+        <div style="display:none;" id="countDown"></div></center>
 
    <div style="display:none;" id="game">
-    <button id="myBtn">Instructions</button>
+<!--     <button id="myBtn">Instructions</button> -->
     <div id="infoBar">
       <div id="plyDiv">
            <ul style="list-style-type: none; display: inline-block;" id="PlyInfo">
