--- a/html/game.html
+++ b/html/game.html
@@ -43,6 +43,15 @@
         <p id="spacebar">
         </div>
         </p>
+      <div id="player1">
+        <img id ="img1" src="../images/player1.png" height="100px;" width="200px;" />
+      </div>
+      <div id="player2">
+        <img id = "img2" src="../images/player2.png" height="100px;" width="200px;" />
+        
+      </div>
+
+
 
     <script src="../js/game.js"></script>     
     </body>
