final web design

--- a/html/startpage.html
+++ b/html/startpage.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-	<p> &nbsp; Developing a Psychological<br>Aggression Game for TEENZ </p>
+	<p> &nbsp; Developing a Psychological<br>Aggression Game</p>
 	<img id = "playButton" src="../images/startButton.png" onclick="location.href='loginPage.html';">
 
 </body>
