--- a/html/instructions.html
+++ b/html/instructions.html
@@ -18,8 +18,8 @@
         <p>As soon as the light turns green, click the space bar. Whoever clicks the spacebar first wins the round!</p>
                <p>If you win the round, you have three options:</p>
                   <ol id="onstList">
-                    <li>Save Your Tokens. Remember, your tokens will increase in value each round</li><br>
-                    <li>Convert a number of tokens to points</li><br>
+                    <li>Save Your Tokens. Remember, your tokens will increase in value each round<br/><br/></li>
+                    <li>Convert a number of tokens to points<br/><br/></li>
                     <li>Deduct a number of points from your opponent</li>
                   </ol>
                 <p>Whoever has the most points after 30 rounds wins the game!</p>
