--- a/html/startpage.html
+++ b/html/startpage.html
@@ -8,14 +8,15 @@
       integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
       crossorigin="anonymous"></script>
 
-      <link rel="stylesheet" href="../css/startpage.css"> 
+
+      <link rel="stylesheet" href="../css/startpage.css">
       <link href="https://fonts.googleapis.com/css?family=BioRhyme" rel="stylesheet">
 
 </head>
 
 <body>
-	<p> &nbsp; Developing a Psychological<br>Aggression Game</p>
-	<img id = "playButton" src="../images/startButton.png" onclick="location.href='loginPage.html';">
+	<p> &nbsp; Developing a Psychological<br>Aggression Game for TEENZ </p>
+	<img id = "playButton" src="../images/startButton.png" alt="Start" onclick="location.href='/html/loginPage.html';">
 
 </body>
 
