--- a/html/game.html
+++ b/html/game.html
@@ -184,7 +184,7 @@
               <p>Bob has ___ Points</p>
               <p>Enter the amount of points you want to deduct.</p>
               <input type="text" name="pointsToDeduct"   id="pointsDeduct">
-              <input type="hidden" name="username" id="usernameId" value="">
+              <input type="hidden" name="username" id="usernameId2" value=""> <!-- 2 -->
               <input type="submit" id = "deductId" value="Enter">
             </div>
 
@@ -198,7 +198,7 @@
               <h1>Send a message to Bob!</h1>
                   <div id="inputId">
                       <input type="text" name="message"  id="messageId">
-                      <input type="hidden" name="username" id="usernameId" value="">
+                      <input type="hidden" name="username" id="usernameId3" value=""> <!-- 3 -->
                       <input type="submit" id = "submitId" value="Send">
                   </div>
                   <button id="instBtn" class="button">Instructions</button><br><br>
